- Added ability to change and save "Invert Declination", "Invert Pan" and "Scroll Rate" in Settings
- Improved saving of playercfg.lua
- Fixed a bug where it was possible to try to rename an nonexisting Profile
- Fixed a bug where ScrollRate and Gamma could be saved incorrectly
- AboutForm has been fully reworked - now it's organized in tabs and also includes "About", "Changelog" and "License"

## Version 1.8.2:

- Renamed "rl_sso_num_times_shown" to "Login Attempts" for more clarity
- Removed "Force Watch Movies" setting because it's effect was not proved. "-nomovies" is working as usual
- Optimization: changed Regex to String.Contains() in IsModRequired() method - it's 170x faster! 0.2 ms vs 34 ms
- Optimization: changed Regex to String.Contains() in GetActiveModsFromFile() method - it's 126x faster! 0.3 ms vs 38 ms
- Optimization: changed Regex to String.Contains() in GetModFoldersFromFile() method - it's 34x faster! 1 ms vs 34 ms
- Optimization: changed Regex to String.Contains() in ModIsPlayable() method - it's 10x faster now! 3 ms vs 32 ms
- Optimization: changed Directory.GetFiles() to File.Exists() in GetCurrentGameEXE() method - it's 1.45x faster now!
- Optimization: changed Directory.GetFiles() to File.Exists() in CheckForGraphicsConfigEXE() method - it's 1.45x faster now!
- Optimization: refactored StartGameWithOptions() method - it's 1.14x faster 
- Optimization: refactored GetMods() method - it's more readable and around 2% faster
- Optimization: There is no more Regex object calls in ModManager Form - it uses 35% less RAM now. 8388 Kb vs 11 300 Kb (in my case)
- Optimization: Startup time is 8% faster now - 512 ms vs 555 ms in 1.8.1 (with a lot of mods)
- Optimization: Application is a 1 Kb lighter. 1037 Kb vs 1038 Kb in 1.8.1
- Some small tweaks here and there

## Version 1.8.1:

- Executable size was optimized. It's 2.4 times smaller than before (1 038 Kb instead of 2 487 Kb)!
- Many code tweaks and some optimizations