@@ -161,6 +161,7 @@
             // specialThanks1LinkLabel
             // 
             this.specialThanks1LinkLabel.AutoSize = true;
+            this.specialThanks1LinkLabel.LinkColor = System.Drawing.Color.DodgerBlue;
             this.specialThanks1LinkLabel.Location = new System.Drawing.Point(244, 16);
             this.specialThanks1LinkLabel.Name = "specialThanks1LinkLabel";
             this.specialThanks1LinkLabel.Size = new System.Drawing.Size(60, 13);
@@ -172,6 +173,7 @@
             // specialThanks2LinkLabel
             // 
             this.specialThanks2LinkLabel.AutoSize = true;
+            this.specialThanks2LinkLabel.LinkColor = System.Drawing.Color.DodgerBlue;
             this.specialThanks2LinkLabel.Location = new System.Drawing.Point(244, 38);
             this.specialThanks2LinkLabel.Name = "specialThanks2LinkLabel";
             this.specialThanks2LinkLabel.Size = new System.Drawing.Size(60, 13);
@@ -204,6 +206,7 @@
             // specialThanks3LinkLabel
             // 
             this.specialThanks3LinkLabel.AutoSize = true;
+            this.specialThanks3LinkLabel.LinkColor = System.Drawing.Color.DodgerBlue;
             this.specialThanks3LinkLabel.Location = new System.Drawing.Point(245, 61);
             this.specialThanks3LinkLabel.Name = "specialThanks3LinkLabel";
             this.specialThanks3LinkLabel.Size = new System.Drawing.Size(60, 13);
